fix: add word break in repo title

--- a/src/components/repos-detail/components/repo-detail-item/RepoDetailItem.module.css
+++ b/src/components/repos-detail/components/repo-detail-item/RepoDetailItem.module.css
@@ -13,6 +13,10 @@
   gap: 1.5rem;
 }
 
+.repo__item-header p:first-child {
+  word-break: break-all;
+}
+
 .repo__item-header svg {
   margin-left: 0.5rem;
 }
